styles: fix content overflow on animation play

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,15 @@
   text-align: center;
 }
 
-.main {
+.main-content {
   display: flex;
   justify-content: center;
   min-height: 100vh;
+}
+
+.main-wrapper {
+  width: 95vw;
+  overflow: hidden;
 }
 
 #root {
@@ -22,6 +27,6 @@
   display: flex;
   align-items: center;
   width: 100%;
-  background-color: rgba(255, 0, 0, 0.2);
+  /* background-color: rgba(255, 0, 0, 0.2); */
   min-height: 100vh;
 }
